syntax = "proto3";
package sync;

option go_package = "/sync";

service Sync {
  rpc SyncRoutes(SyncRoutesRequest) returns (SyncRoutesResponse) {}
}

message SyncRoutesRequest {
  bytes data = 1;
}

message SyncRoutesResponse {
  bool result = 1;
}